Fix spacing problem with liste items

--- a/scss/editor-style.scss
+++ b/scss/editor-style.scss
@@ -76,11 +76,6 @@ body.gutenberg-editor-page .editor-block-list__block[data-align="full"] {
 	}
 }
 
-.block-editor-block-list__block, .wp-block-quote {
-	margin-top: 18px;
-	margin-bottom: 18px;
-}
-
 .editor-styles-wrapper .wp-block-file .block-editor-rich-text > div {
 	margin: 0;
 }
